--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,4 +1,4 @@
-.btn-danger:hover, .btn-danger:active, .btn:active{
+.btn-danger:hover; .btn-danger:active; .btn:active{
     background-color: #ce454e;
     border:none
 }
@@ -22,6 +22,15 @@
     100% {
       transform: translateY(0);
     }
+  }
+
+  .about-text {
+    display: flex; 
+    justify-content: flex-end; 
+    flex-direction: column; 
+    align-items: flex-end; 
+    border-right: solid; 
+    padding-right:20px
   }
 
   @media (max-width: 500px){
