--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -5,16 +5,23 @@
     overflow: hidden;
   }
   
+  .contact-text {
+    position: absolute;
+    top: 100px;
+    font-size: 160px;
+    font-weight: 600;
+  }
+
   .circle {
     position: absolute;
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
   }
   
   .circle-one {
-    top: 162px;
-    left: 342px;
+    top: 134px;
+    left: 334px;
     background: #ffc0cb;
   }
   
@@ -29,12 +36,54 @@
   .contact-form {
     background-color: rgba(255, 255, 255, 0.1);
     height: 500px;
-    margin: 0 500px 0 500px;
+    margin: 100px 500px 0 500px;
     z-index: 2;
-    border-radius: 30px;
+    border-radius: 20px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.4);
     border-right: 0;
     border-bottom: 0;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(20px);
+    padding: 50px;
+  }
+
+  .form-control {
+    background-color: transparent;
+    border: none;
+    color: white;
+    border-bottom: 1px solid;
+    border-radius: 0;
+    line-height: 1.5;
+    padding: 0;
+  }
+
+  .form-control:focus{
+    color: white;
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+  }
+
+  .message-box {
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 10px;
+  }
+
+  .field {
+    margin-bottom: 30px;
+  }
+
+  /* My info card */
+  .my-info {
+    background-color: white;
+    height: 180px;
+    width: 380px;
+    position: absolute;
+    z-index: 3;
+    right: 374px;
+    top: 389px;
+    border-radius: 20px;
+    border: none;
+    padding: 30px;
   }
