--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -20,23 +20,22 @@
   }
   
   .circle-one {
-    top: 134px;
+    top: 110px;
     left: 334px;
     background: #ffc0cb;
   }
   
-  .circle-two {
+  /* .circle-two {
     bottom: 61px;
     right: 396px;
     background: #877aa3;
-  }
+  } */
 
   /* Contact Form */
 
   .contact-form {
     background-color: rgba(255, 255, 255, 0.1);
     height: 500px;
-    margin: 100px 500px 0 500px;
     z-index: 2;
     border-radius: 20px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
@@ -45,6 +44,7 @@
     border-bottom: 0;
     backdrop-filter: blur(20px);
     padding: 50px;
+    margin-bottom: 20px;
   }
 
   .form-control {
@@ -81,9 +81,59 @@
     width: 380px;
     position: absolute;
     z-index: 3;
-    right: 374px;
+    right: calc(50% - 510px);
     top: 389px;
     border-radius: 20px;
     border: none;
     padding: 30px;
+  }
+
+  /* Responsive Web */
+  @media (max-width: 576px) {
+    .container-wrapper {
+      flex-direction: column;
+      margin-top: 100px;
+    }
+  
+    .my-info {
+      position: static;
+      width: 380px;
+      height: 180px;
+      border-radius: 20px;
+      border: none;
+      padding: 30px;
+      margin-bottom: 10px;
+    }
+  }
+
+  @media (min-width: 576px) {
+    .contact-form {
+      width: 700px;
+    }
+    .my-info {
+      right: calc(50% - 290px);
+      top: 600px;
+      width: 310px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .my-info {
+      width: 320px;
+      right: calc(50% - 430px);
+      top: 389px;
+    }
+  }
+
+  @media (min-width: 992px) {
+    .contact-form {
+      width: 800px;
+    }
+
+    .my-info {
+      width: 380px;
+      right: calc(50% - 510px);
+      top: 389px;
+    }
+   
   }
